# arch2darcs

./: COPYRIGHT  Makefile  README  arch2darcs.cabal  arch2darcs.hs
debian/: changelog  control  copyright  manpage.sgml.ex  rules
