Name: arch2darcs
Version: 1.0.3
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
Build-Depends: haskell-src, network, unix, parsec, MissingH>=0.10.6
GHC-Options: -O2

Executable: arch2darcs
Main-Is: arch2darcs.hs
