Name: arch2darcs
Version: 1.0.6
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
Build-Depends: base, network, unix, parsec, MissingH>=0.18.0, regex-compat, hslogger, directory

Executable: arch2darcs
Main-Is: arch2darcs.hs
GHC-Options: -O2
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
